# obs-c3_plugins

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.rst  README.rst
headers/: c3-plugin-defines.h  version.h.in
